kubernetes/deployment/app-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: "8080"
        prometheus.io/path: /actuator/prometheus
    spec:
      containers:
      - name: app-api
        image: spring-boot-hpa
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-api
spec:
  ports:
  - name: high
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: low
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-api
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-api
                port:
                  number: 80
